# LR6

./: CMakeLists.txt  LR6main.cpp  headerLr6.h  inputstr.cpp  main  main.cpp  my_c_string_functions.cpp  my_program  new3.cpp  task1.cpp  task2  task2.cpp  task3.cpp  task3new.cpp  tests.cpp
